--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,13 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.coin-pile {
+  background-color: #ffd700; /* Or couleur de pile */
+  content: "Pile";
+}
+
+.coin-face {
+  background-color: #c0c0c0; /* Or couleur de face */
+  content: "Face";
+}
